# godot_game

./: .gitignore  .gitmodules  MainNativeLib.tres  MainScene.gdns  MainScene.tscn  project.godot
Scenes/Units/: BaseUnit.gdns  BaseUnit.tscn  Marine.gdns  Marine.tscn  Unit.tscn
Scripts/: Camera2D.gdns  Label.gd
Singletons/: SceneLoader.gdns  SceneLoader.tscn  UnitManager.gdns  UnitManager.tscn
Sprites/Units/Marine/: MarineSprite.png.import  Sheet.png.import
Sprites/animated water/: land1.png.import  land10.png.import  land11.png.import  land12.png.import  land13.png.import  land2.png.import  land3.png.import  land4.png.import  land5.png.import  land6.png.import  land7.png.import  land8.png.import  land9.png.import  water1_1.png.import  water1_2.png.import  water1_3.png.import  water1_4.png.import  water1_5.png.import  water2_1.png.import  water2_2.png.import  water2_3.png.import  water2_4.png.import  water2_5.png.import  water3_1.png.import  water3_2.png.import  water3_3.png.import  water3_4.png.import  water3_5.png.import  wateranimate2.png.import
cscripts/: .clang-format  .gitignore  CMakeLists.txt  project_settings.cmake
cscripts/epic-online-services/: CMakeLists.txt
cscripts/include/: Game.hpp  MyCamera.hpp  Prelude.hpp  SceneLoader.hpp  UnitManager.hpp  UnitSelection.hpp
cscripts/include/Units/: BaseUnit.hpp  Marine.hpp
cscripts/src/: Game.cpp  Macros.hpp  MyCamera.cpp  MyLibrary.cpp  SceneLoader.cpp  UnitManager.cpp  UnitSelection.cpp  Utils.hpp
cscripts/src/Units/: BaseUnit.cpp  Marine.cpp
